Bug 397070 - "Add to desktop" feature of the apps launcher does not work correctly with KCMs
Summary: "Add to desktop" feature of the apps launcher does not work correctly with KCMs
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kservice
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.48.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: David Faure
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-08-01 22:22 UTC by Patrick Silva
Modified: 2018-08-07 09:50 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.14.0
Sentry Crash Report:


Attachments
demonstration (3.77 MB, video/webm)
2018-08-01 22:22 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2018-08-01 22:22:34 UTC
Created attachment 114259 [details]
demonstration

search for some kcm in the apps launcher
right click the kcm in the search results
select "Add to desktop"
Result: generic icon named "kcm_xxx.desktop" is added to desktop.
When clicked, an error message shows up ("Unable to run the command specified.
The file or folder xxx does not exist").
Watch the screencast please.
Comment 1 Kai Uwe Broulik 2018-08-02 08:02:30 UTC
The problem is that entryPath() returns a relative path for KCMs, documentation has this helpful comment "The corresponding factory should know relative to what."..
Comment 2 Kai Uwe Broulik 2018-08-06 12:33:40 UTC
Git commit cf7381d7fbff0c966b93b7c2df4cd748011689e2 by Kai Uwe Broulik.
Committed on 06/08/2018 at 12:33.
Pushed by broulik into branch 'Plasma/5.12'.

[Service Runner] Look up relative entryPaths

For KCMs we get a relative entryPath() for our KService resulting in an invalid URL being created.

Differential Revision: https://phabricator.kde.org/D14546

M  +17   -9    runners/services/servicerunner.cpp

https://commits.kde.org/plasma-workspace/cf7381d7fbff0c966b93b7c2df4cd748011689e2
Comment 3 Kai Uwe Broulik 2018-08-07 09:50:11 UTC
Git commit 2ce76bc5ade277f6a020bff062733601dc24e1f2 by Kai Uwe Broulik.
Committed on 07/08/2018 at 09:49.
Pushed by broulik into branch 'master'.

[Kicker] Look up relative entryPaths

For KCMs we get a relative entryPath() for our KService resulting in an invalid URL being created.
FIXED-IN: 5.14.0

Differential Revision: https://phabricator.kde.org/D14647

M  +15   -5    applets/kicker/plugin/actionlist.cpp
M  +2    -0    applets/kicker/plugin/actionlist.h
M  +1    -1    applets/kicker/plugin/appentry.cpp
M  +1    -1    applets/kicker/plugin/runnermatchesmodel.cpp

https://commits.kde.org/plasma-desktop/2ce76bc5ade277f6a020bff062733601dc24e1f2