[Kicker] Look up relative entryPaths

For KCMs we get a relative entryPath() for our KService resulting in an invalid URL being created.

BUG: 397070
FIXED-IN: 5.14.0

Differential Revision: https://phabricator.kde.org/D14647